tests/NormalTests/paczka1/small_fuzzy/17942784.err
Error in line 1: au2MVAsm S680 65,2
Error in line 3: A72 S680 41,6
Error in line 2: w4O S384 91,5
